--- a/src/app.css
+++ b/src/app.css
@@ -1,15 +1,14 @@
-:root {
-  --black: rgba(72, 73, 75, 0.897);
-  --black-dark: rgba(39, 38, 38, 0.911);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .bg-black {
-  background-color: var(--black) !important;
+  background-color: rgb(29, 33, 41) !important;
   
 }
 
 .main-bg {
-  background:linear-gradient(var(--black), var(--black-dark)), url(assets/imgs/code-bg.jpg);
+  background:linear-gradient(rgba(31, 82, 185, 0.897), (rgba(173, 39, 39, 0.911), url(/assets/imgs/code-bg.jpg)));
   height: 380px;
 }
 
