--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .bg-black {
-  background-color: rgb(23, 23, 24) !important;
+  background-color: #171719 !important;
   
 }
 
@@ -44,7 +44,9 @@ body {
 }
 
 .navbar-background {
-  background-color: rgba(17, 17, 17, 0.938);
+  /*background-color: rgba(17, 17, 17, 0.938);*/
+  background-color: #171719 !important;
+
 }
 
 .suomi-koodarit {
