changed color with style

--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
   background: linear-gradient(#171719d3, #171719), url(/assets/imgs/code-bg.jpg) !important;
 }
 
-blue {  
+hr {  
   color: #3ec7fe; 
   font-weight: 600;
 }
