--- a/src/app.css
+++ b/src/app.css
@@ -71,7 +71,7 @@ body {
 
 }
 
-.suomi-koodarit {
+.suomi-koodarit h2 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: white;
   font-weight: bold;
@@ -79,14 +79,18 @@ body {
 }
 
 .nappula {
+  display: inline-block;
   background-color: #5865f2;
   border-radius: 5px;
   height: 3rem;
   font-weight: 600;
   color: rgb(255, 255, 255);
   font-size: 18px;
-  width: 57.5%;
+  width: 57.5% ;
   transition: 0.8s;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
 }
 
