--- a/public/style.css
+++ b/public/style.css
@@ -32250,6 +32250,10 @@ video {
   background: linear-gradient(#171719d3, #171719), url(/assets/imgs/code-bg.jpg) !important;
 }
 
+blue {
+  color: #3ec8ff;
+}
+
 .col p {
   font-size: 20px;
   width: 70%;
@@ -32323,11 +32327,10 @@ body {
   display: inline-block;
   background-color: #5865f2;
   border-radius: 5px;
-  height: 3rem;
   font-weight: 600;
   color: rgb(255, 255, 255);
   font-size: 18px;
-  width: 57.5% ;
+  width: 67.5% ;
   transition: 0.8s;
   text-align: center;
   padding-top: 10px;
