--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 
 .bg-black {
   /* background-color: #171719 !important; */
-  background: linear-gradient(#171719d3, #171719), url(/assets/imgs/code-bg.jpg) !important;
+  background: linear-gradient(#171719d3, #171719), url(/assets/imgs/bg.svg) !important;
 }
 
 blue {
