--- a/public/main.css
+++ b/public/main.css
@@ -1,10 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .bg-black {
   /* background-color: #171719 !important; */
-  background: linear-gradient(#171719d3, #171719), url(/assets/imgs/bg.svg) !important;
+  background: linear-gradient(#171719d3, #171719), url(assets/imgs/bg.svg) !important;
 }
 
 blue {
@@ -32,7 +28,7 @@ blue {
 }
 
 .main-bg {
-  background:linear-gradient(rgba(31, 82, 185, 0.897), (rgba(173, 39, 39, 0.911), url(/assets/imgs/code-bg.jpg)));
+  background:linear-gradient(rgba(31, 82, 185, 0.897), (rgba(173, 39, 39, 0.911), url(assets/imgs/code-bg.jpg)));
   height: 380px;
 }
 
