--- a/public/main.css
+++ b/public/main.css
@@ -4,12 +4,17 @@
 }
 
 blue {
-  color: #2d56c7;
+  color: #2553d3;
 }
 
 .col p {
   font-size: 20px;
   width: 70%;
+}
+
+h3 {
+  font-size: 1.875rem;
+  line-height: 2;
 }
 
 .col .discord {
@@ -71,34 +76,42 @@ body {
 
 }
 
-.suomi-koodarit h2 {
+h1 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: white;
   font-weight: bold;
   font-size: 20px;
 }
 
-.nappula {
+h2 {
+  font-size: 3rem;
+  line-height: 2;
+}
+
+p {
+  font-size: 20px;
+  line-height: 1.6;
+}
+
+.btn {
   display: inline-block;
   background-color: #5865f2;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.486);
   border-radius: 5px;
   font-weight: 600;
   color: rgb(255, 255, 255);
   font-size: 18px;
-  width: 67.5% ;
-  transition: 0.8s;
+  width: 100% ;
+  transition: ease-out 0.5s;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-
 }
 
-.nappula:hover {
+.btn:hover {
   background-color: #2530a7;
-  transition: 0.8s;
-
+  transition: ease-in 0.5s;
 }
-
 
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
