--- a/public/main.css
+++ b/public/main.css
@@ -28,12 +28,14 @@ h3 {
 
 .footer p {
   font-size: 20px;
-  color: white ;
-
+  color: white;
 }
 
 .main-bg {
-  background:linear-gradient(rgba(31, 82, 185, 0.897), (rgba(173, 39, 39, 0.911), url(assets/imgs/code-bg.jpg)));
+  background: linear-gradient(
+    rgba(31, 82, 185, 0.897),
+    (rgba(173, 39, 39, 0.911), url(assets/imgs/code-bg.jpg))
+  );
   height: 380px;
 }
 
@@ -56,15 +58,15 @@ body {
 
 .about-page .b-example-divider {
   height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
+  background-color: rgba(0, 0, 0, 0.1);
+  border: solid rgba(0, 0, 0, 0.15);
   border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  
+  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+    inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
 }
-  
+
 .about-page .bi {
-  vertical-align: -.125em;
+  vertical-align: -0.125em;
   fill: currentColor;
 }
 
@@ -73,11 +75,11 @@ body {
     background-color: #171719 !important;
   */
   background-color: #202225 !important;
-
 }
 
 h1 {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   color: white;
   font-weight: bold;
   font-size: 20px;
@@ -85,36 +87,71 @@ h1 {
 
 h2 {
   font-size: 3rem;
-  line-height: 2;
+  padding: 1.2rem 0;
+}
+
+h3 {
+  font-size: 1.5rem;
+  color: #5865f2;
 }
 
 p {
+  float: left;
   font-size: 20px;
   line-height: 1.6;
 }
 
+footer {
+  display: none;
+}
+
+.left-container {
+  padding: 1.2rem;
+  width: 50rem;
+  float: left;
+}
+
+.right-container {
+  float: right;
+}
+
+iframe {
+  margin: 3rem 0;
+  float: right;
+}
+
 .btn {
   display: inline-block;
+  text-transform: uppercase;
   background-color: #5865f2;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.486);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.185);
   border-radius: 5px;
-  font-weight: 600;
+  font-weight: 500;
   color: rgb(255, 255, 255);
   font-size: 18px;
-  width: 100% ;
   transition: ease-out 0.5s;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 0.6rem 1.5rem;
 }
 
 .btn:hover {
-  background-color: #2530a7;
+  background-color: #111111;
   transition: ease-in 0.5s;
 }
 
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
+  }
+}
+
+@media (max-width: 850px) {
+  .left-container {
+    width: auto !important;
+  }
+
+  .right-container {
+    float: left !important;
+    margin: 0 1.2rem;
   }
 }
