--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  background-color: #0084ff !important;
+}
 /*# sourceMappingURL=main.css.map */
